--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			        </div>
                 </div>
                 <div id="clock-box">
-                    Jack<span class="STYLE1">与</span> Lucy<span class="STYLE1">已经相识了</span>
+                    曹朝奎<span class="STYLE1">与</span> 邹汝微<span class="STYLE1">已经相识了</span>
                   <div id="clock"></div>
               </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
