--- a/index.html
+++ b/index.html
@@ -198,11 +198,8 @@
 
         var textAnimate = eval(Jscex.compile("async", function () {
             var together = new Date();
-            together.setFullYear(2019, 2, 9); 			//时间年月日
-            together.setHours(0);						//小时
-            together.setMinutes(0);					//分钟
-            together.setSeconds(0);					//秒前一位
-            together.setMilliseconds(0);				//秒第二位
+            // 2019年2月9日，12点
+            together.setFullYear(2019, 1, 9, 12, 0, 0); 			//时间年月日
 
             $("#code").show().typewriter();
             $("#clock-box").fadeIn(500);
