--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div id="wrap">
         <div id="text">
             <div id="code">
-                <span class="say"> 我们的故事</span><br>
+                <span class="say"> 爱的故事--我们</span><br>
                 <span class="say"> </span><br>
                 <span class="say">// 不经意相识, 或许是缘分，或许是注定的。</span><br>
                 <span class="say"> </span><br>
