--- a/index.html
+++ b/index.html
@@ -51,12 +51,11 @@
                 <span class="say"> </span><br>
                 <span class="say">// You are my only girl..永远..</span><br>
                 <span class="say"> </span><br>
-                <span class="say"> </span><br>
-                <span class="say"><span class="space"></span> -- 曹朝奎--</span>
+                <span class="say"><span class="space"></span> -- 曹朝奎 --</span>
             </div>
         </div>
         <div id="clock-box">
-            曹朝奎<span class="STYLE1">与</span> 邹汝微<span class="STYLE1">已经相识了</span>
+            曹朝奎 <span class="STYLE1">与</span> 邹汝微<span class="STYLE1">已经相识的</span>
             <div id="clock"></div>
         </div>
         <canvas id="canvas" width="1100" height="680"></canvas>
@@ -86,7 +85,7 @@
             seed: {
                 x: width / 2 - 20,
                 color: "rgb(190, 26, 37)",
-                scale: 2
+                scale: 4
             },
             branch: [
                 [535, 680, 570, 250, 500, 200, 30, 100, [
