--- a/index.html
+++ b/index.html
@@ -37,25 +37,25 @@
             <div id="code">
                 <span class="say"> 爱的故事--我们</span><br>
                 <span class="say"> </span><br>
-                <span class="say">//不经意相识, 或许是缘分，或许是注定。</span><br>
+                <span class="say">//不经意相识，是缘分或许是注定。</span><br>
                 <span class="say"> </span><br>
                 <span class="say">//以后不管有怎么样，我都会在。</span><br>
                 <span class="say"> </span><br>
-                <span class="say">//就算全世界都都抛弃你，记得还有我。</span><br>
+                <span class="say">//就算全世界都抛弃你，记得还有我。</span><br>
                 <span class="say"> </span><br>
-                <span class="say">// 再累都不用害怕，因为你有我。</span><br>
+                <span class="say">//再累都不用害怕，因为你有我。</span><br>
                 <span class="say"> </span><br>
                 <span class="say">//记得在你最需要的时候想起我。</span><br>
                 <span class="say"> </span><br>
                 <span class="say">//我会一直陪着你。</span><br>
                 <span class="say"> </span><br>
-                <span class="say">//You are my only girl..永远..</span><br>
+                <span class="say">//You are my only girl..forever..</span><br>
                 <span class="say"> </span><br>
                 <span class="say"><span class="space"></span> -- 曹朝奎 --</span>
             </div>
         </div>
         <div id="clock-box">
-            曹朝奎 <span class="STYLE1">与</span> 邹汝微<span class="STYLE1">已经相识的</span>
+            曹朝奎<span class="STYLE1">与</span>邹汝微<span class="STYLE1"> 相识的</span>
             <div id="clock"></div>
         </div>
         <canvas id="canvas" width="1100" height="680"></canvas>
