--- a/index.html
+++ b/index.html
@@ -196,10 +196,8 @@
         }));
 
         var textAnimate = eval(Jscex.compile("async", function () {
-            var together = new Date();
-            // 2019年2月9日，12点
-            together.setFullYear(2019, 1, 9, 0, 0, 0); 			//时间年月日
-
+            // 2019年2月9日
+            var together = new Date(2019,1,9,0,0,0)
             $("#code").show().typewriter();
             $("#clock-box").fadeIn(500);
             while (true) {
