--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                 <span class="say"> </span><br>
                 <span class="say">//不经意相识，是缘分或许是注定。</span><br>
                 <span class="say"> </span><br>
-                <span class="say">//以后不管有怎么样，我都会在。</span><br>
+                <span class="say">//不管以后怎么样，我都会在。</span><br>
                 <span class="say"> </span><br>
-                <span class="say">//就算全世界都抛弃你，记得还有我。</span><br>
+                <span class="say">//就算全世界都抛弃你，请记得还有我。</span><br>
                 <span class="say"> </span><br>
-                <span class="say">//再累都不用害怕，因为你有我。</span><br>
+                <span class="say">//再累都不用害怕，因为你还有我。</span><br>
                 <span class="say"> </span><br>
                 <span class="say">//记得在你最需要的时候想起我。</span><br>
                 <span class="say"> </span><br>
