--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>我们的故事</title>
+    <title>白头之约，书向鸿笺</title>
     <link type="text/css" rel="stylesheet" href="./index_files/default.css">
     <script type="text/javascript" src="./index_files/jquery.min.js"></script>
     <script type="text/javascript" src="./index_files/jscex.min.js"></script>
@@ -35,7 +35,7 @@
     <div id="wrap">
         <div id="text">
             <div id="code">
-                <span class="say"> 爱的故事--我们</span><br>
+                <span class="say"> 白头之约，书向鸿笺</span><br>
                 <span class="say"> </span><br>
                 <span class="say">//不经意相识，是缘分或许是注定。</span><br>
                 <span class="say"> </span><br>
